--- a/kdr_provider_op.html
+++ b/kdr_provider_op.html
@@ -32,7 +32,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="kdr_provider_op_files/libs/quarto-html/quarto-syntax-highlighting-07ba0ad10f5680c660e360ac31d2f3b6.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="kdr_provider_op_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="kdr_provider_op_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="kdr_provider_op_files/libs/bootstrap/bootstrap-a4da51e9d36038788987859931dd4f38.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="kdr_provider_op_files/libs/bootstrap/bootstrap-66495f66d5dc8675a5dcca8c89eaa63a.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -62,30 +62,33 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="agosto-salgado-md-sarimar-n-1588951560" class="level4">
-<h4 class="anchored" data-anchor-id="agosto-salgado-md-sarimar-n-1588951560">AGOSTO SALGADO MD, SARIMAR N (1588951560)</h4>
+<section id="toimil-md-brett-a-1932631637" class="level4">
+<h4 class="anchored" data-anchor-id="toimil-md-brett-a-1932631637">TOIMIL MD, BRETT A (1932631637)</h4>
 <hr>
 <!--  *** inserts a horizontal line -->
-<p><span class="important">This table lists the top ten survey questions, sorted in order of priority, that drive the respondents’ top box score for the Institutional Measure: <strong><em>“Likelihood of you recommending this doctor to others with similar healthcare needs”</em></strong></span></p>
+<p><span class="important">This table lists the top ten survey questions, sorted in order of priority, that drive the respondents’ top box score for the Physician Incentive measure:</span></p>
+<center>
+<p><strong><em>“Likelihood of you recommending this doctor to others with similar healthcare needs”</em></strong></p>
+</center>
 <div class="cell">
 <div class="cell-output-display">
-<div id="dsqfqvwtxa" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#dsqfqvwtxa table {
+<div id="kqhfusazpm" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#kqhfusazpm table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#dsqfqvwtxa thead, #dsqfqvwtxa tbody, #dsqfqvwtxa tfoot, #dsqfqvwtxa tr, #dsqfqvwtxa td, #dsqfqvwtxa th {
+#kqhfusazpm thead, #kqhfusazpm tbody, #kqhfusazpm tfoot, #kqhfusazpm tr, #kqhfusazpm td, #kqhfusazpm th {
   border-style: none;
 }
 
-#dsqfqvwtxa p {
+#kqhfusazpm p {
   margin: 0;
   padding: 0;
 }
 
-#dsqfqvwtxa .gt_table {
+#kqhfusazpm .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -111,12 +114,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_caption {
+#kqhfusazpm .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#dsqfqvwtxa .gt_title {
+#kqhfusazpm .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -128,7 +131,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#dsqfqvwtxa .gt_subtitle {
+#kqhfusazpm .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -140,7 +143,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#dsqfqvwtxa .gt_heading {
+#kqhfusazpm .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -152,13 +155,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_bottom_border {
+#kqhfusazpm .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_col_headings {
+#kqhfusazpm .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -173,11 +176,11 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_col_heading {
-  color: #FFFFFF;
-  background-color: #104E8B;
-  font-size: 14px;
-  font-weight: normal;
+#kqhfusazpm .gt_col_heading {
+  color: #333333;
+  background-color: #A4DBE8;
+  font-size: 15px;
+  font-weight: bold;
   text-transform: inherit;
   border-left-style: none;
   border-left-width: 1px;
@@ -193,11 +196,11 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#dsqfqvwtxa .gt_column_spanner_outer {
-  color: #FFFFFF;
-  background-color: #104E8B;
-  font-size: 14px;
-  font-weight: normal;
+#kqhfusazpm .gt_column_spanner_outer {
+  color: #333333;
+  background-color: #A4DBE8;
+  font-size: 15px;
+  font-weight: bold;
   text-transform: inherit;
   padding-top: 0;
   padding-bottom: 0;
@@ -205,15 +208,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#dsqfqvwtxa .gt_column_spanner_outer:first-child {
+#kqhfusazpm .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#dsqfqvwtxa .gt_column_spanner_outer:last-child {
+#kqhfusazpm .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#dsqfqvwtxa .gt_column_spanner {
+#kqhfusazpm .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -225,11 +228,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#dsqfqvwtxa .gt_spanner_row {
+#kqhfusazpm .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#dsqfqvwtxa .gt_group_heading {
+#kqhfusazpm .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -255,7 +258,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#dsqfqvwtxa .gt_empty_group_heading {
+#kqhfusazpm .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -270,15 +273,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#dsqfqvwtxa .gt_from_md > :first-child {
+#kqhfusazpm .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#dsqfqvwtxa .gt_from_md > :last-child {
+#kqhfusazpm .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#dsqfqvwtxa .gt_row {
+#kqhfusazpm .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -297,7 +300,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#dsqfqvwtxa .gt_stub {
+#kqhfusazpm .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -310,7 +313,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#dsqfqvwtxa .gt_stub_row_group {
+#kqhfusazpm .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -324,15 +327,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#dsqfqvwtxa .gt_row_group_first td {
+#kqhfusazpm .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#dsqfqvwtxa .gt_row_group_first th {
+#kqhfusazpm .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#dsqfqvwtxa .gt_summary_row {
+#kqhfusazpm .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -342,16 +345,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#dsqfqvwtxa .gt_first_summary_row {
+#kqhfusazpm .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_first_summary_row.thick {
+#kqhfusazpm .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#dsqfqvwtxa .gt_last_summary_row {
+#kqhfusazpm .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -361,7 +364,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_grand_summary_row {
+#kqhfusazpm .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -371,7 +374,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#dsqfqvwtxa .gt_first_grand_summary_row {
+#kqhfusazpm .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -381,7 +384,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_last_grand_summary_row_top {
+#kqhfusazpm .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -391,11 +394,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_striped {
+#kqhfusazpm .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#dsqfqvwtxa .gt_table_body {
+#kqhfusazpm .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -404,7 +407,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_footnotes {
+#kqhfusazpm .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -418,7 +421,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_footnote {
+#kqhfusazpm .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -427,7 +430,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#dsqfqvwtxa .gt_sourcenotes {
+#kqhfusazpm .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -441,7 +444,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#dsqfqvwtxa .gt_sourcenote {
+#kqhfusazpm .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -449,72 +452,72 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#dsqfqvwtxa .gt_left {
+#kqhfusazpm .gt_left {
   text-align: left;
 }
 
-#dsqfqvwtxa .gt_center {
+#kqhfusazpm .gt_center {
   text-align: center;
 }
 
-#dsqfqvwtxa .gt_right {
+#kqhfusazpm .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#dsqfqvwtxa .gt_font_normal {
+#kqhfusazpm .gt_font_normal {
   font-weight: normal;
 }
 
-#dsqfqvwtxa .gt_font_bold {
+#kqhfusazpm .gt_font_bold {
   font-weight: bold;
 }
 
-#dsqfqvwtxa .gt_font_italic {
+#kqhfusazpm .gt_font_italic {
   font-style: italic;
 }
 
-#dsqfqvwtxa .gt_super {
+#kqhfusazpm .gt_super {
   font-size: 65%;
 }
 
-#dsqfqvwtxa .gt_footnote_marks {
+#kqhfusazpm .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#dsqfqvwtxa .gt_asterisk {
+#kqhfusazpm .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#dsqfqvwtxa .gt_indent_1 {
+#kqhfusazpm .gt_indent_1 {
   text-indent: 5px;
 }
 
-#dsqfqvwtxa .gt_indent_2 {
+#kqhfusazpm .gt_indent_2 {
   text-indent: 10px;
 }
 
-#dsqfqvwtxa .gt_indent_3 {
+#kqhfusazpm .gt_indent_3 {
   text-indent: 15px;
 }
 
-#dsqfqvwtxa .gt_indent_4 {
+#kqhfusazpm .gt_indent_4 {
   text-indent: 20px;
 }
 
-#dsqfqvwtxa .gt_indent_5 {
+#kqhfusazpm .gt_indent_5 {
   text-indent: 25px;
 }
 
-#dsqfqvwtxa .katex-display {
+#kqhfusazpm .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#dsqfqvwtxa div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#kqhfusazpm div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
@@ -537,87 +540,7 @@ ul.task-list li input[type="checkbox"] {
 <td class="gt_row gt_center" headers="Linear Correlation"></td>
 <td class="gt_row gt_center" headers="Top-Box Ratio"></td>
 <td class="gt_row gt_center" headers="Driver Index"></td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">84.7 ( 6 )</td>
-</tr>
-<tr class="even">
-<td class="gt_row gt_center" headers="Priority">1</td>
-<td class="gt_row gt_left" headers="Question">How well the staff worked together to care for you</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.78</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">6.19</td>
-<td class="gt_row gt_center" headers="Driver Index">91</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">82.3 ( 12 )</td>
-</tr>
-<tr class="odd">
-<td class="gt_row gt_center" headers="Priority">2</td>
-<td class="gt_row gt_left" headers="Question">Staff's sensitivity to the difficulties that your condition and treatment can cause</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.92</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">5.91</td>
-<td class="gt_row gt_center" headers="Driver Index">97</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">82.1 ( 29 )</td>
-</tr>
-<tr class="even">
-<td class="gt_row gt_center" headers="Priority">3</td>
-<td class="gt_row gt_left" headers="Question">Overall quality of care received from the nurse practitioner or physician assistant</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.79</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">6.13</td>
-<td class="gt_row gt_center" headers="Driver Index">91</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">87.8 ( 24 )</td>
-</tr>
-<tr class="odd">
-<td class="gt_row gt_center" headers="Priority">4</td>
-<td class="gt_row gt_left" headers="Question">Care providers' concern for your questions and worries</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.83</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">5.2</td>
-<td class="gt_row gt_center" headers="Driver Index">83</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">84.9 ( 20 )</td>
-</tr>
-<tr class="even">
-<td class="gt_row gt_center" headers="Priority">5</td>
-<td class="gt_row gt_left" headers="Question">Your trust in the skill of the care providers</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.89</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">4.25</td>
-<td class="gt_row gt_center" headers="Driver Index">77</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">84 ( 11 )</td>
-</tr>
-<tr class="odd">
-<td class="gt_row gt_center" headers="Priority">6</td>
-<td class="gt_row gt_left" headers="Question">How well the care providers kept you informed about your condition</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.89</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">4.88</td>
-<td class="gt_row gt_center" headers="Driver Index">84</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">85.7 ( 26 )</td>
-</tr>
-<tr class="even">
-<td class="gt_row gt_center" headers="Priority">7</td>
-<td class="gt_row gt_left" headers="Question">Nurses answer to your questions</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.8</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">4.6</td>
-<td class="gt_row gt_center" headers="Driver Index">75</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">82.6 ( 17 )</td>
-</tr>
-<tr class="odd">
-<td class="gt_row gt_center" headers="Priority">8</td>
-<td class="gt_row gt_left" headers="Question">Care providers' efforts to include you in decisions about your treatment</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.82</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">4.25</td>
-<td class="gt_row gt_center" headers="Driver Index">73</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">84.1 ( 21 )</td>
-</tr>
-<tr class="even">
-<td class="gt_row gt_center" headers="Priority">9</td>
-<td class="gt_row gt_left" headers="Question">Caring manner of the nurses</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.8</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">4.08</td>
-<td class="gt_row gt_center" headers="Driver Index">69</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">85.2 ( 15 )</td>
-</tr>
-<tr class="odd">
-<td class="gt_row gt_center" headers="Priority">10</td>
-<td class="gt_row gt_left" headers="Question">Care providers' discussion of your treatment options</td>
-<td class="gt_row gt_center" headers="Linear Correlation">0.87</td>
-<td class="gt_row gt_center" headers="Top-Box Ratio">3.65</td>
-<td class="gt_row gt_center" headers="Driver Index">70</td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">83.3 ( 17 )</td>
+<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">75 ( 1 )</td>
 </tr>
 </tbody>
 </table>
@@ -628,11 +551,10 @@ ul.task-list li input[type="checkbox"] {
 <div style="page-break-after: always;"></div>
 <p><strong>Notes:</strong></p>
 <ul>
-<li><p><strong><em>124</em></strong> &nbsp;Press Ganey Patient Satisfaction surveys</p></li>
-<li><p>Received dates from <strong><em>2024-02-01</em></strong> to <strong><em>2024-10-31</em></strong>.</p></li>
-<li><p>The <u>percentile rank</u> is an internal rank that compares all physicians within the service line. For example, a percentile rank of 90 means the score is better than 90% of all physicians’ scores within Moffitt.</p></li>
-<li><p>The <u>correlation</u> measures the strength of the linear association between the response to the institutional measure and the question of interest. The 124 surveys analyzed <strong>exceeds</strong> the minimum number of surveys (30) required to come to a <strong>statistically sound</strong> conclusion regarding the correlation.</p></li>
-<li><p>The <u>top box ratio</u> calculates the likelihood of giving the top box score for the institutional measure, given the score is a top box for the question of interest.</p></li>
+<li><p>The data was collected from <strong><em>4</em></strong> &nbsp;surveys received from <strong><em>2024-02-01</em></strong> to <strong><em>2024-10-31</em></strong>.</p></li>
+<li><p>The <u>percentile rank</u> is an internal rank that compares all physicians within the service line. It is calculated by counting the number of scores less than the physician’s top box score (x) and dividing by the number of top box scores (n). A percentile rank of 90 means the score is better than 90% of all physicians’ scores within Moffitt.</p></li>
+<li><p>The <u>correlation</u> measures the strength of the linear association between the response to the Physician Incentive measure and the question of interest. The 4 surveys analyzed <strong>is less than</strong> the minimum number of surveys (30) required to come to a <strong>statistically sound</strong> conclusion regarding the correlation.</p></li>
+<li><p>The <u>top box ratio</u> calculates the likelihood of giving the top box score for the Physician Incentive measure, given the score is a top box for the question of interest.</p></li>
 <li><p>The <u>driver index</u> sorts the combined correlation and top box ratio scores.</p></li>
 <li><p>The <u>priority order</u> is determined by combining the driver index and the percentile rank.</p></li>
 </ul>
